# quivo

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  turbo.json
.github/workflows/: ci.yml
apps/landing/: .gitignore  package.json
apps/landing/app/: globals.css  layout.tsx  page.tsx
apps/landing/components/landing/: answer-grid.tsx  cta.tsx  footer.tsx  hero.tsx  how-it-works.tsx  nav.tsx  proof.tsx  ticker.tsx
apps/landing/lib/: links.ts
apps/mobile/: PLAN.md  README.md  RESEARCH.md  pubspec.yaml
apps/mobile/android/: build.gradle.kts
apps/mobile/android/app/: build.gradle.kts
apps/mobile/assets/animations/: fast.riv  play.riv  win.lottie
apps/mobile/ios/Runner/: Info.plist
apps/mobile/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile/ios/Runner/Base.lproj/: LaunchScreen.storyboard
apps/mobile/lib/: main.dart
apps/mobile/lib/src/: config.dart  router.dart
apps/stage/: README.md  package.json  tsconfig.tsbuildinfo
apps/stage/app/: layout.tsx  page.tsx  sound.ts  theme.ts
apps/stage/app/play/: page.tsx
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md
onchain/: Anchor.toml
onchain/programs/quivo/: Cargo.toml
onchain/programs/quivo/src/: lib.rs
services/realtime/: Dockerfile  package.json  tsconfig.json
services/realtime/src/: demo-host.ts  gateway-smoke.ts  gateway.ts  index.ts  sim.ts
services/realtime/src/chain/: devnet-escrow.ts  retry.ts  worker.ts
services/realtime/src/onchain/: quivo.json  quivo.ts
services/realtime/src/rooms/: GameRoom.ts
(+42 files in other folders)
